--- a/HTML_Javascript/시험.md
+++ b/HTML_Javascript/시험.md
@@ -1,362 +1,14 @@
-### - Read.controller.js
+### - App.controller.js
 ```java
 sap.ui.define([
-    "sap/ui/core/mvc/Controller",
-    "sap/ui/model/json/JSONModel",
-    "sap/ui/model/Filter",
-    "sap/ui/model/FilterOperator"
-], (Controller, JSONModel, Filter, FilterOperator) => {
-    "use strict";
+  "sap/ui/core/mvc/Controller"
+], (BaseController) => {
+  "use strict";
 
-    return Controller.extend("ycl2project09.controller.Read", {
-        onInit() {
-            let oModel = new JSONModel({results : []});
-            this.getView().setModel(oModel, "local");
-        },
-        onPress: function() {
-            // 버튼 클릭 시 OData Model 데이터 조회
-            // 서버모델 데이터를 가져오려면, Request 요청을 보내야 함
-            // OData Model에서 데이터를 가져온다.
-            // 데이터를 가져오면, json 구조에 맞는 데이터가 리턴
-            // 해당 json data를 json model에다가 담아서 사용한다.
-            // let oModel = this.getView().getModel();
-            let that=this;
-            let oLocalModel = this.getView().getModel("local");
-            let oModel = this.getOwnerComponent().getModel();   // OData Model. 이름없는 기본모델
-            let oFilter = new Filter({
-                path : "ProductID",
-                operator : "BT",
-                value1 : 10,
-                value2 : 20
-            });
-
-            oModel.createKey("/Products", {
-                OrderID : "1",
-                ProductID : "2"
-            });
-            // sPath => "Order_Details(OrderID=1, ProductID=2)"
-
-            // .create() 생성 .read() 조회 .update() 업데이트 .remove() 삭제 
-            // oModel.read("경로", {});
-            oModel.read("/Products", {
-                urlParameters: {
-                    "$expand" : "Supplier"
-                },
-                filters: [oFilter],
-                // sorters: [],
-                success: function(oReturn) {
-                    // 단 건 조회 : oReturn 자체에 데이터가 들어옴
-                    // 다 건 조회 : oReturn.results 해서 배열 접근
-
-                    // oLocalModel.setProperty("경로", 세팅할데이터);
-                    let oData = [];
-                    for(let i=0; i<oReturn.results.length; i++) {
-                        let item = oReturn.results[i];
-                        oData.push({
-                            ProductID: item.ProductID,
-                            ProductName: item.ProductName,
-                            SupplierID: item.SupplierID,
-                            UnitsInStock: item.UnitsInStock
-                        });
-                    }
-                    oLocalModel.setProperty("/results", oData);
-
-                    // success 함수 안쪽에 처리 oo
-                    // .read 사용시 내부 함수 (success, error)에서는 this가
-                    // controller를 가리키지 않기 때문에 this를 controller로
-                    // 사용하게 하려면 .bind(this)를 적용하거나
-                    // let that = this; 와 같이 변수로 담아놓고 사용하자.
-                    // 아니면 success 함수 내에서 this를 쓰지 않도록
-                    // 필요한 내용은 최상단에 변수로 미리 선언해놓고 써도 됨.
-                }.bind(this),
-                error: function() {}
-                // 메세지 처리 xx
-            });
-        }
-    });
-});
-```
-</br>
-</br>
-
-### - Read.view.xml
-```html
-<mvc:View controllerName="ycl2project09.controller.Read"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns:f="sap.f"
-    xmlns:fb="sap.ui.comp.filterbar"
-    xmlns:core="sap.ui.core"
-    xmlns="sap.m"
-    >
-    
-    <f:DynamicPage id="dynamicPageId" headerExpanded="{/headerExpanded}" toggleHeaderOnTitleClick="{/titleClickable}">
-        <!-- DynamicPage Title -->
-        <!-- DynamicPage Header -->
-        <f:header>
-            <f:DynamicPageHeader pinnable="true">
-                <fb:FilterBar id="filterbar" persistencyKey="myPersKey" useToolbar="false" search=".onSearch" filterChange=".onFilterChange" afterVariantLoad=".onAfterVariantLoad">
-                    <fb:filterGroupItems>
-                        <fb:FilterGroupItem name="Name" label="Name" groupName="Group1" visibleInFilterBar="true">
-                            <fb:control>
-                                <Input id="inputProductName" showValueHelp="true" valueHelpRequest="onValueHelpRequest" placeholder="ProductName" />
-                            </fb:control>
-                        </fb:FilterGroupItem>
-                        <fb:FilterGroupItem name="Category" label="Category" groupName="Group1" visibleInFilterBar="true">
-                            <fb:control>
-                                <MultiComboBox
-                                    name="Category"
-                                    selectionChange=".onSelectionChange"
-                                    items="{
-                                        path: '/ProductCategories',
-                                        templateShareable: true
-                                    }"
-                                >
-                                    <core:Item key="{key}" text="{name}"/>
-                                </MultiComboBox>
-                            </fb:control>
-                        </fb:FilterGroupItem>
-                        <fb:FilterGroupItem name="SupplierName" label="SupplierName" groupName="Group1" visibleInFilterBar="true">
-                            <fb:control>
-                                <MultiComboBox
-                                    name="SupplierName"
-                                    selectionChange=".onSelectionChange"
-                                    items="{
-                                        path: '/ProductSuppliers',
-                                        templateShareable: true
-                                    }"
-                                >
-                                    <core:Item key="{key}" text="{name}"/>
-                                </MultiComboBox>
-                            </fb:control>
-                        </fb:FilterGroupItem>
-                    </fb:filterGroupItems>
-                </fb:FilterBar>
-            </f:DynamicPageHeader>
-        </f:header>
-        <f:content>
-            <VBox> 
-                <Button text="데이터 조회" press="onPress" />
-                <Table id="idProductsTable2"
-                    sticky="HeaderToolbar,ColumnHeaders"
-                    inset="false"
-                    items="{local>/results}"
-                    class="sapFDynamicPageAlignContent"
-                    width="auto">
-                    <headerToolbar>
-                        <Toolbar>
-                            <Title text="Products" level="H2"/>
-                        </Toolbar>
-                    </headerToolbar>
-                    <columns>
-                        <Column width="12em">
-                            <Text text="ProductID" />
-                        </Column>
-                        <Column width="12em">
-                            <Text text="ProductName" />
-                        </Column>
-                        <Column width="12em">
-                            <Text text="SupplierID" />
-                        </Column>
-                        <Column width="12em">
-                            <Text text="UnitsInStock" />
-                        </Column>
-                    </columns>
-                    <items>
-                        <ColumnListItem>
-                            <cells>
-                                <Text text="{local>ProductID}" />
-                                <Text text="{local>ProductName}" />
-                                <Text text="{local>SupplierID}" />
-                                <Text text="{local>UnitsInStock}" />
-                            </cells>
-                        </ColumnListItem>
-                    </items>
-                </Table>
-            </VBox>
-        </f:content>
-        <!-- DynamicPage Footer -->
-        <f:footer>
-            <OverflowToolbar>
-                <ToolbarSpacer/>
-                <Button type="Accept" text="Accept"/>
-                <Button type="Reject" text="Reject"/>
-            </OverflowToolbar>
-        </f:footer>
-    </f:DynamicPage>
-</mvc:View>
-```
-</br>
-</br>
-
-### - manifest.json
-```java
-{
-  "_version": "1.76.0",
-  "sap.app": {
-    "id": "ycl2project10",
-    "type": "application",
-    "i18n": "i18n/i18n.properties",
-    "applicationVersion": {
-      "version": "0.0.1"
-    },
-    "title": "{{appTitle}}",
-    "description": "{{appDescription}}",
-    "resources": "resources.json",
-    "sourceTemplate": {
-      "id": "@sap/generator-fiori:basic",
-      "version": "1.19.3",
-      "toolsId": "1d868a68-3626-4445-b3d5-b7a171869dff"
-    }
-  },
-  "sap.ui": {
-    "technology": "UI5",
-    "icons": {
-      "icon": "",
-      "favIcon": "",
-      "phone": "",
-      "phone@2": "",
-      "tablet": "",
-      "tablet@2": ""
-    },
-    "deviceTypes": {
-      "desktop": true,
-      "tablet": true,
-      "phone": true
-    }
-  },
-  "sap.ui5": {
-    "flexEnabled": true,
-    "dependencies": {
-      "minUI5Version": "1.142.0",
-      "libs": {
-        "sap.m": {},
-        "sap.ui.core": {}
+  return BaseController.extend("exam.excode032.controller.App", {
+      onInit() {
       }
-    },
-    "contentDensities": {
-      "compact": true,
-      "cozy": true
-    },
-    "models": {
-      "i18n": {
-        "type": "sap.ui.model.resource.ResourceModel",
-        "settings": {
-          "bundleName": "ycl2project10.i18n.i18n"
-        }
-      }
-    },
-    "resources": {
-      "css": [
-        {
-          "uri": "css/style.css"
-        }
-      ]
-    },
-    "routing": {
-      "config": {
-        "routerClass": "sap.m.routing.Router",
-        "controlAggregation": "pages",
-        "controlId": "app",
-        "transition": "slide",
-        "type": "View",
-        "viewType": "XML",
-        "path": "ycl2project10.view",
-        "async": true,
-        "viewPath": "ycl2project10.view"
-      },
-      "routes": [
-        {
-          "name": "RouteMain",
-          "pattern": ":mainParam:",
-          "target": [
-            "TargetMain"
-          ]
-        },
-        {
-          "name": "RouteDetail",
-          "pattern": "detail/{param1}/:param2:",
-          "target": [
-            "TargetDetail"
-          ]
-        }
-      ],
-      "targets": {
-        "TargetMain": {
-          "id": "Main",
-          "name": "Main"
-        },
-        "TargetDetail": {
-          "id": "Detail",
-          "name": "Detail"
-        }
-      }
-    },
-    "rootView": {
-      "viewName": "ycl2project10.view.App",
-      "type": "XML",
-      "id": "App",
-      "async": true
-    }
-  }
-}
-```
-</br>
-</br>
-
-### - Main.view.xml
-```html
-<mvc:View controllerName="ycl2project10.controller.Main"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m">
-    <Page id="page" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
-        <Text id="idTextMain" text="Main page" />
-        <Button text="화면 이동" press="onPress" />
-    </Page>
-</mvc:View>
-```
-</br>
-</br>
-
-### - Detail.view.xml
-```html
-<mvc:View controllerName="ycl2project10.controller.Detail"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m">
-    <Page id="page2" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
-        <Text id="idText" text="Detail page" />
-    </Page>
-</mvc:View>
-```
-</br>
-</br>
-
-### - Main.controller.js
-```java
-sap.ui.define([
-    "sap/ui/core/mvc/Controller"
-], (Controller) => {
-    "use strict";
-
-    return Controller.extend("ycl2project10.controller.Main", {
-        onInit() {
-            const oRouter = this.getOwnerComponent().getRouter();
-            oRouter.getRoute("RouteMain").attachPatternMatched(this._onPatternMatched, this);
-        },
-        _onPatternMatched: function(oEvent) {
-            let sParam = oEvent.getParameters().arguments.mainParam;
-            this.byId("idTextMain").setText(sParam);
-        },
-        onPress: function() {
-            let oRouter = this.getOwnerComponent().getRouter();
-            oRouter.navTo("RouteDetail", {
-                param1 : "hihi",
-                param2 : "okok"
-            }, false);      // 파라미터가 /detail/hihi/okok 이렇게 나옴
-            // Parameter 1 : 이동할 대상 routes의 name
-            // Parameter 2 : 화면 이동 시 전달할 파라미터들 지정
-            // Parameter 3 : router 히스토리 초기화 여부
-        }
-    });
+  });
 });
 ```
 </br>
@@ -365,30 +17,623 @@ sap.ui.define([
 ### - Detail.controller.js
 ```java
 sap.ui.define([
-    "sap/ui/core/mvc/Controller"
-], (Controller) => {
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/model/Filter",
+    "sap/m/MessageBox"
+], (Controller, JSONModel, Filter, MessageBox) => {
     "use strict";
 
-    return Controller.extend("ycl2project10.controller.Detail", {
+    return Controller.extend("exam.excode032.controller.Detail", {
         onInit() {
-            // 컨트롤러 실행시 최초 1번
             const oRouter = this.getOwnerComponent().getRouter();
-            oRouter.getRoute("RouteDetail").attachPatternMatched(this._ooo, this);
+            oRouter.getRoute("RouteDetail").attachPatternMatched(this.onPatternMatched, this);
         },
-        _ooo: function(oEvent) {
-            // route pattern matched 이벤트는
-            // URL이 일치할 때마다 실행
+        onChartButton: function(oEvent) {
+            let oChart = this.byId("idChart");
+            let oSelectedItem = oEvent.getParameter("item").getText();
 
-            let sParam1 = oEvent.getParameters().arguments.param1;
-            this.byId("idText").setText(sParam1);
+            if(oSelectedItem==="Column") {
+                oChart.setVizType("column");
+            }
+            else if(oSelectedItem==="Line") {
+                oChart.setVizType("line");
+            }
+            else if(oSelectedItem==="Bar") {
+                oChart.setVizType("bar");
+            }
+            else if(oSelectedItem==="Donut") {
+                oChart.setVizType("donut");
+            }
+            else if(oSelectedItem==="Pie") {
+                oChart.setVizType("pie");
+            }
         },
-        // onInit과 attachPatternMatched 함수(_ooo) 차이점 명확하게 이해하기
-        onNavButtonPress: function() {
-            let oRouter = this.getOwnerComponent().getRouter();
-            oRouter.navTo("RouteMain", {
-                mainParam: "comeback main view"
-            }, false);
+        onBack: function() {
+            let that = this;
+            MessageBox.confirm("메인 화면으로 이동하시겠습니까?", {
+                actions: ["Yes", MessageBox.Action.CLOSE],
+				emphasizedAction: "Yes",
+				onClose: function (sAction) {
+					if(sAction==="Yes") {
+                        let oRouter = that.getOwnerComponent().getRouter();     
+                        oRouter.navTo("RouteMain", {
+                            param1 : ""
+                        })
+                    }
+				}
+            });
+        },
+        onSelectionChange: function(oEvent) {
+            let oBindingContext = oEvent.getParameters().listItem.getBindingContext("DetailModel");
+            let sPath = oBindingContext.getPath();
+            let oData = this.getView().getModel("DetailModel").getProperty(sPath).to_flights;
+
+            let to_flightsModel = new JSONModel(oData);
+            this.getView().setModel(to_flightsModel, "to_flightsModel");
+
+            this.byId("idChartButton").setVisible(true);
+            this.byId("idChart").setVisible(true);
+        },
+        onSearch: function() {
+            this.byId("idDetailCarrierlist").removeSelections();
+            this.byId("idChart").setVisible(false);
+            this.byId("idChartButton").setVisible(false);
+            let oChart = this.byId("idChart");
+            oChart.setVizType("column");
+
+            let oComboboxConnectionID = this.byId("idConnectionID");
+            let oComboboxCountryFrom = this.byId("idCountryFrom");
+            let oComboboxCityTo = this.byId("idCityTo");
+
+            let ConnectionID_key = oComboboxConnectionID.getSelectedKey();
+            let CountryFrom_key = oComboboxCountryFrom.getSelectedKey();
+            let CityTo_key = oComboboxCityTo.getSelectedKey();
+
+            let inputConnectionID = this.getView().byId("idConnectionID").getValue() || ConnectionID_key;
+            let inputCountryFrom = this.getView().byId("idCountryFrom").getValue() || CountryFrom_key;
+            let inputCityTo = this.getView().byId("idCityTo").getValue() || CityTo_key;
+            let oFilters = [];
+
+            if(inputCountryFrom && inputCityTo) {       // CountryFrom 와 CityTo 입력
+                oFilters.push(new Filter({ path: 'Countryfr', operator: 'EQ', value1: inputCountryFrom }));
+                oFilters.push(new Filter({ path: 'Cityto', operator: 'EQ', value1: inputCityTo }));
+            }
+            else if(inputCountryFrom) {     // CountryFrom 입력 들어올 때 
+                oFilters.push(new Filter({ path: 'Countryfr', operator: 'EQ', value1: inputCountryFrom }));
+            }
+            else if(inputCityTo) {      // CityTo 입력 들어올 때
+                oFilters.push(new Filter({ path: 'Cityto', operator: 'EQ', value1: inputCityTo }));
+            }
+            oFilters.push(new Filter({ path: 'Connid', operator: 'Contains', value1: inputConnectionID }));
+            
+            let oDataModel = this.getView().getModel();
+            let DetailModel = this.getView().getModel("DetailModel");
+            let sParam;
+            let results_Detail = DetailModel.getProperty("/results");
+            if(results_Detail.length === 0) {
+                sParam = DetailModel.getProperty("/Carrid");
+            }
+            else {
+                sParam = results_Detail[0].Carrid;
+            }
+
+            oFilters.push(new Filter({ path: 'Carrid', operator: 'EQ', value1: sParam }));
+            let arr = [];
+
+            oDataModel.read("/Spfli", {
+                urlParameters: {
+                    "$expand" : "to_flights"
+                },
+                filters: oFilters,
+                success: function(oReturn) {
+                    for(let i=0; i<oReturn.results.length; i++) {
+                        arr.push(oReturn.results[i]);
+                    }
+                    DetailModel.setProperty("/results", arr);
+                },
+                error: function() { console.log("error"); }
+            });
+        },
+        onPatternMatched: function(oEvent) {
+            let sParam = oEvent.getParameters().arguments.param1;
+            
+            let oDataModel = this.getView().getModel();
+            let DetailModel = new JSONModel({ results : [], Carrid : [] });
+            let arr = [];
+
+            let oComboboxModel = new JSONModel({ 
+                ConnectionID : [],
+                CountryFrom : [],
+                CityTo : []
+            });
+
+            DetailModel.setProperty("/Carrid", sParam);
+            oDataModel.read("/Spfli", {
+                urlParameters: {
+                    "$expand" : "to_flights"
+                },
+                filters: [
+                    new Filter("Carrid", "EQ", sParam)
+                ],
+                success: function(oReturn) {
+                    for(let i=0; i<oReturn.results.length; i++) {
+                        arr.push(oReturn.results[i]);
+                    }
+                    DetailModel.setProperty("/results", arr);
+                    this.getView().setModel(DetailModel, "DetailModel");
+
+                    ///////////////////////////// 콤보박스 모델 설정
+                    let data_ComboboxModel = oComboboxModel.getData();
+
+                    for (let i = 0; i < arr.length; i++) {
+                        let ConnectionID_flag = true, CountryFrom_flag = true, CityTo_flag = true;
+
+                        for (let j = 0; j < data_ComboboxModel.ConnectionID.length; j++) {      // ConnectionID 중복 체크
+                            if (arr[i].Connid === data_ComboboxModel.ConnectionID[j]) {
+                                ConnectionID_flag = false;
+                                break;
+                            }
+                        }
+
+                        for (let j = 0; j < data_ComboboxModel.CountryFrom.length; j++) {       // CountryFrom 중복 체크
+                            if (arr[i].Countryfr === data_ComboboxModel.CountryFrom[j]) {
+                                CountryFrom_flag = false;
+                                break;
+                            }
+                        }
+
+                        for (let j = 0; j < data_ComboboxModel.CityTo.length; j++) {            // CityTo 중복 체크
+                            if (arr[i].Cityto === data_ComboboxModel.CityTo[j]) {
+                                CityTo_flag = false;
+                                break;
+                            }
+                        }
+
+                        if (ConnectionID_flag) data_ComboboxModel.ConnectionID.push(arr[i].Connid);
+                        if (CountryFrom_flag) data_ComboboxModel.CountryFrom.push(arr[i].Countryfr);
+                        if (CityTo_flag) data_ComboboxModel.CityTo.push(arr[i].Cityto);
+                    }
+                    oComboboxModel.setData(data_ComboboxModel);
+                    this.getView().setModel(oComboboxModel, "oComboboxModel");
+
+                }.bind(this),
+                error: function() { console.log("error"); }
+            })
         }
     }); 
 });
 ```
+</br>
+</br>
+
+### - Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/core/Fragment"
+], (Controller, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("exam.excode032.controller.Main", {
+        onInit() {
+            let oData = { result : [] };
+            let oLocalModel = new JSONModel(oData);     // 로컬 모델 만들기
+            this.getView().setModel(oLocalModel, "local");      // 로컬이라는 이름으로 로컬모델 세팅
+            // 기본 모델은 oData Model로 이미 존재하기 때문에 새로 추가하는 JSON Model인 경우 이름 부여
+
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.getRoute("RouteMain").attachPatternMatched(this.onPatternMatched, this);
+        },
+        onPatternMatched: function() {
+            this.getView().getModel("local").setData({ result : [] });
+        },
+        onDetails: function(oEvent) {
+            let oRow = oEvent.getSource().getParent();      // 버튼 객체 위에 있는 해당 열을 가져옴
+            let oBindingContext = oRow.getBindingContext("local");
+            let sPath = oBindingContext.getPath();
+            let sParam = this.getView().getModel("local").getProperty(sPath).Carrid;
+
+            let oRouter = this.getOwnerComponent().getRouter();     // 라우터
+            oRouter.navTo("RouteDetail", {
+                param1 : sParam
+            })
+        },
+        onAddCarrier: function(oEvent) {
+            // Fragmnet.load 해서 파일 로드 하면, oLoadDialog 에 Dialog 객체가 들어옴.
+            // 하지만 로드 하기 전에는, oLoadDialog는 undefined로 빈 값임.
+            let oDialog = sap.ui.getCore().byId("idDialog");
+            let oDataModel = this.getView().getModel();
+            
+            // Add Carrier 버튼 클릭 시 Dialog fragment가 load 되도록 한다.
+
+            if(oDialog) {       // 이미 로드 되었다면
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "exam.excode032.view.fragment.Dialog",        // Dialog fragment의 파일 경로
+                    type: "XML",        // fragment의 종류 : HTML, XML, JS
+                    controller: this    // 현재 controller를 넘겨줌
+                                        // Dialog 안에 있는 이벤트 함수 등을 해당 controller에서 구현할 수 있도록 !!
+                }).then(function(oDialog) {
+                    oDataModel.read("/Carriers", {
+                        urlParameters: { "$expand": "to_schedules" },
+                        success: function(oData) {
+                            // _inactive 플래그 세팅 (노선 없는 항목 구분)
+                            oData.results.forEach(function(item) {
+                                item._inactive = !item.to_schedules || item.to_schedules.results.length === 0;
+                            });
+
+                            // Dialog 전용 JSONModel 세팅
+                            let oJson = new JSONModel({ Carriers: oData.results });
+                            oDialog.setModel(oJson, "dialog");
+                            oDialog.open();
+                        },
+                        error: function() {
+                            MessageToast.show("데이터 로드 실패");
+                        }
+                    });             
+                })
+            }
+        },
+        onDelete: function() {      // Main 테이블 리스트 선택 시 삭제하는 함수
+            let oTable = this.byId("idMainCarrierlist");
+            let oRows = oTable.getSelectedIndices();        // 선택한 테이블 리스트 인덱스 가져오기
+
+            let oLocalModel = this.getView().getModel("local");
+            let arr = oLocalModel.getData().result;                 // 원래 Main 테이블의 리스트들 가져오기
+            let delete_arr = [];
+            let flag = true;
+            for(let i=0; i<arr.length; i++) {
+                for(let j=0; j<oRows.length; j++) {
+                    if(i === oRows[j]) {
+                        flag=false;
+                        break;
+                    }
+                }
+                if(flag) {
+                    delete_arr.push(arr[i]);
+                }
+                flag=true;
+            }
+            oLocalModel.setProperty("/result", delete_arr);
+        },
+        onSelectionChange: function(oEvent) {
+            const oItem = oEvent.getParameter("listItem");
+            const oCtx = oItem.getBindingContext("dialog");
+            if (!oCtx) return;
+
+            const bInactive = !!oCtx.getProperty("_inactive");
+            if (bInactive) {
+                oEvent.getSource().removeSelections(true);
+                sap.m.MessageToast.show("노선정보가 없습니다.");
+            }
+        },
+        onOKPress: function() {
+            let oTable = sap.ui.getCore().byId("idDialogCarrierlist");
+            let oItem = oTable.getSelectedItem();
+            if (!oItem) {  // 선택된 항목 없으면 종료
+                MessageToast.show("항목을 선택해주세요.");
+                return;
+            }
+
+            let sPath = oItem.getBindingContext("dialog").getPath();
+            let oDialogModel = oTable.getModel("dialog");
+            let oSelected = oDialogModel.getProperty(sPath);
+            
+            // 노선 없는 항목은 선택 불가
+            if (oSelected._inactive) {
+                MessageToast.show("노선정보가 없습니다.");
+                return;
+            }
+
+            let oLocalModel = this.getView().getModel("local");
+            let aData = oLocalModel.getProperty("/result");
+            aData.push(oSelected);
+            oLocalModel.setProperty("/result", aData);
+            this.onClose();
+        },
+        onClose: function() {
+            // Fragment.load 로 불러온 객체의 경우
+            // sap.ui.getCore().byId("객체아이디") 로 접근해서 가져옴
+            sap.ui.getCore().byId("idDialog").close();
+
+            // 만약 Dialog 안에 Table이 있고 해당 Table을 가져오고자 한다면?
+            // sap.ui.getCore().byId("TableID");  
+        }
+    });
+});
+```
+</br>
+</br>
+
+### - App.view.xml
+```html
+<mvc:View controllerName="exam.excode032.controller.App"
+    displayBlock="true"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <App id="app">
+    </App>
+</mvc:View>
+```
+</br>
+</br>
+
+### - Detail.view.xml
+```html
+<mvc:View controllerName="exam.excode032.controller.Detail"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:core="sap.ui.core"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns:viz="sap.viz.ui5.controls"
+    xmlns:viz.feeds="sap.viz.ui5.controls.common.feeds"
+    xmlns:viz.data="sap.viz.ui5.data"
+    xmlns="sap.m">
+    <f:DynamicPage id="dynamicPageId" headerExpanded="{/headerExpanded}" toggleHeaderOnTitleClick="{/titleClickable}" showFooter="true" >
+        <f:header>
+            <f:DynamicPageHeader>
+                <fb:FilterBar id="filterbar" persistencyKey="myPersKey" useToolbar="false" search=".onSearch" filterChange=".onFilterChange" afterVariantLoad=".onAfterVariantLoad">
+                    <fb:filterGroupItems>
+                        <fb:FilterGroupItem name="ConnectionID" label="Connection ID" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <ComboBox 
+                                    id = "idConnectionID"
+                                    items="{
+                                        path: 'oComboboxModel>/ConnectionID'
+                                    }">
+                                    <core:Item key="{oComboboxModel>}" text="{oComboboxModel>}" />
+                                </ComboBox>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+
+                        <fb:FilterGroupItem name="CountryFrom" label="Country From" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <ComboBox
+                                    id = "idCountryFrom"
+                                    items="{
+                                        path: 'oComboboxModel>/CountryFrom'
+                                    }">
+                                    <core:Item key="{oComboboxModel>}" text="{oComboboxModel>}" />
+                                </ComboBox>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+
+                        <fb:FilterGroupItem name="CityTo" label="City To" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <ComboBox
+                                    id = "idCityTo"
+                                    items="{
+                                        path: 'oComboboxModel>/CityTo'
+                                    }">
+                                    <core:Item key="{oComboboxModel>}" text="{oComboboxModel>}" />
+                                </ComboBox>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                    </fb:filterGroupItems>
+                </fb:FilterBar>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <VBox> 
+                <Table id="idDetailCarrierlist" 
+                    inset="false"
+                    mode="SingleSelectLeft"
+                    selectionChange="onSelectionChange"
+                    items="{DetailModel>/results}">
+                    <columns>
+                        <Column hAlign="Center">
+                            <Text text="Carrier ID" />
+                        </Column>
+                        <Column hAlign="Center">
+                            <Text text="Connection ID" />
+                        </Column>
+                        <Column hAlign="Center">
+                            <Text text="Country from" />
+                        </Column>
+                        <Column hAlign="Center">
+                            <Text text="City from" />
+                        </Column>
+                        <Column hAlign="Center">
+                            <Text text="Airpfrom" />
+                        </Column>
+                        <Column hAlign="Center">
+                            <Text text="Countryto" />
+                        </Column>
+                        <Column hAlign="Center">
+                            <Text text="Cityto" />
+                        </Column>
+                        <Column hAlign="Center">
+                            <Text text="Airpto" />
+                        </Column>
+                    </columns>
+                    <items>
+                        <ColumnListItem vAlign="Middle">
+                            <cells>
+                                <Text text="{DetailModel>Carrid}" />
+                                <Text text="{DetailModel>Connid}" />
+                                <Text text="{DetailModel>Countryfr}" />
+                                <Text text="{DetailModel>Cityfrom}" />
+                                <Text text="{DetailModel>Airpfrom}" />
+                                <Text text="{DetailModel>Countryto}" />
+                                <Text text="{DetailModel>Cityto}" />
+                                <Text text="{DetailModel>Airpto}" />
+                            </cells>
+                        </ColumnListItem>
+                    </items>
+                </Table>
+
+                <SegmentedButton
+                    id = "idChartButton"
+                    visible = "false"
+                    selectionChange=".onChartButton"
+                    class="sapUiSmallMarginTop">
+                    <items>
+                        <SegmentedButtonItem text="Column" />
+                        <SegmentedButtonItem text="Line" />
+                        <SegmentedButtonItem text="Bar" />
+                        <SegmentedButtonItem text="Donut" />
+                        <SegmentedButtonItem text="Pie" />
+                    </items>
+                </SegmentedButton>
+
+                <viz:VizFrame id="idChart" width="100%" height="350px" class="sapUiSmallMarginTop"
+                            vizType="column"
+                            visible="false"
+                            uiConfig="{'applicationSet':'fiori'}"
+                            vizProperties="{ 
+                                type : 'sap.ui.model.type.Date',
+                                formatOptions: { pattern: 'yy-MM-dd'},
+                                title : { visible : true, text : '항공편별 잔여석 현황', alignment: 'left' },
+                                plotArea : { 
+                                    dataLabel: { visible: true } ,
+                                    colorPalette: ['#B7F0B1']
+                                }
+                            }">
+                    <viz:dataset>
+                        <viz.data:FlattenedDataset data="{to_flightsModel>/results}">
+                            <viz.data:dimensions>
+                                <viz.data:DimensionDefinition name="날짜" value="{
+                                    path: 'to_flightsModel>Fldate',
+                                    type: 'sap.ui.model.type.Date',
+                                    formatOptions: { pattern: 'yy-MM-dd' }
+                                }" />
+                            </viz.data:dimensions>
+
+                            <viz.data:measures>
+                                <viz.data:MeasureDefinition name="잔여석" value="{to_flightsModel>Seatsocc}" />
+                                <viz.data:MeasureDefinition name="잔여석2" value="{to_flightsModel>Seatsocc}" />
+                            </viz.data:measures>
+                        </viz.data:FlattenedDataset>
+                    </viz:dataset>
+
+                    <viz:feeds>
+                        <viz.feeds:FeedItem uid="categoryAxis" type="Dimension" values="날짜" />
+                        <viz.feeds:FeedItem uid="valueAxis" type="Measure" values="잔여석" />
+                    </viz:feeds>
+                </viz:VizFrame>
+
+            </VBox>
+        </f:content>
+
+        <f:footer>
+            <OverflowToolbar>
+                <ToolbarSpacer/>
+                <Button type="Back" text="뒤로가기" press="onBack" />
+            </OverflowToolbar>
+        </f:footer>
+    </f:DynamicPage>
+</mvc:View>
+```
+</br>
+</br>
+
+### - Main.view.xml
+```html
+<mvc:View controllerName="exam.excode032.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:t="sap.ui.table"
+    xmlns:rowmodes="sap.ui.table.rowmodes"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <t:Table id="idMainCarrierlist"
+            class="sapUiMediumMargin"
+            rows="{local>/result}"
+            selectionMode="MultiToggle"
+            paste="onPaste"
+            ariaLabelledBy="title">
+            <t:rowMode>
+                <rowmodes:Interactive rowCount="20"/>
+            </t:rowMode>
+            <t:extension>
+                <OverflowToolbar style="Clear">
+                    <Title text="Carrier List"/>
+                    <ToolbarSpacer />
+                    <Button text="Add Carrier" press="onAddCarrier" />
+                    <Button text="Delete" press="onDelete" />
+                </OverflowToolbar>
+            </t:extension>
+            <t:columns>
+                <t:Column>
+                    <Label text="Carrier ID" />
+                    <t:template>
+                        <Text text="{local>Carrid}" wrapping="false" />
+                    </t:template>
+                </t:Column>
+                <t:Column>
+                    <Label text="Carrier Name" />
+                    <t:template>
+                        <Text text="{local>Carrname}" wrapping="false" />
+                    </t:template>
+                </t:Column>
+                <t:Column>
+                    <Label text="Currency Code" />
+                    <t:template>
+                        <Text text="{local>Currcode}" wrapping="false" />
+                    </t:template>
+                </t:Column>
+                <t:Column>
+                    <Label text="Url" />
+                    <t:template>
+                        <Text text="{local>Url}" wrapping="false" />
+                    </t:template>
+                </t:Column>
+                <t:Column>
+                    <Label text="Details" />
+                    <t:template>
+                        <Button text="Details" press="onDetails" enabled="{= ${local>to_schedules/results}.length === 0 ? false : true}" />
+                    </t:template>
+                </t:Column>
+            </t:columns>
+        </t:Table>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+
+### - Dialog.fragment.xml
+```html
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:c="sap.ui.core">
+    <Dialog id="idDialog"
+            title="Select List"
+            contentHeight="50%"
+            contentWidth="40%">
+        <content>
+            <Table id="idDialogCarrierlist"
+                inset="false"
+                mode="SingleSelectLeft"
+                selectionChange="onSelectionChange"
+                items="{dialog>/Carriers}">
+                <columns>
+                    <Column>
+                        <Text text="Carrier ID" />
+                    </Column>
+                    <Column>
+                        <Text text="Carrier Name" />
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem vAlign="Middle">
+                        <cells>
+                            <Text text="{dialog>Carrid}" />
+                            <Text text="{dialog>Carrname}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </content>
+        <buttons>
+            <Button text="OK" press=".onOKPress" type="Emphasized" />
+            <Button text="close" press=".onClose" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
+</br>
+</br>
